<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SignIn">

    <RelativeLayout
        android:layout_width="450dp"
        android:layout_height="300dp"
        android:background="@drawable/logo1"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent">

        <ImageView
            android:id="@+id/back_btn"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:src="@drawable/back_btn"
            android:layout_marginStart="50dp"
            android:layout_marginTop="30dp"
            android:contentDescription="@string/backBtn_desc"
            />

    </RelativeLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toBottomOf="parent">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/kumar_one"
            android:text="@string/welcomeBack"
            android:textSize="30sp"
            android:textColor="@color/pure_black"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/login"
            android:fontFamily="@font/kumar_one"
            android:textColor="@color/smth_orange"
            android:textSize="15sp"/>

        <EditText
            android:id="@+id/username_input"
            android:layout_width="250dp"
            android:layout_height="35dp"
            android:background="@drawable/rounded_corner"
            android:hint="@string/username_hint"
            android:autofillHints="username"
            android:inputType="text"
            android:fontFamily="@font/alata"
            android:textSize="15sp"
            android:textColor="@color/black"
            android:layout_marginTop="15dp"
            />

        <EditText
            android:id="@+id/password_input"
            android:layout_width="250dp"
            android:layout_height="35dp"
            android:background="@drawable/rounded_corner"
            android:hint="@string/password_hint"
            android:inputType="textPassword"
            android:fontFamily="@font/alata"
            android:textSize="15sp"
            android:textColor="@color/black"
            android:layout_marginTop="15dp"
            />
    </LinearLayout>

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginTop="240dp"
        >

        <ImageView
            android:layout_width="15dp"
            android:layout_height="15dp"
            android:src="@drawable/baseline_circle_24"
            android:contentDescription="@string/rememberMe_desc"
            android:layout_marginEnd="210dp"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/remember"
            android:fontFamily="@font/alata"
            android:textSize="10sp"
            android:textColor="@color/smth_gray"
            android:layout_marginStart="20dp"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/forgot_pass"
            android:textSize="10sp"
            android:fontFamily="@font/alata"
            android:layout_marginStart="150dp"/>

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="450dp"
        android:layout_height="250dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:background="@drawable/logo2">


    </RelativeLayout>

</androidx.constraintlayout.widget.ConstraintLayout>